--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,15 @@
-# docker-compose.yml
-version: '3'
+version: '3.8'
 
 services:
-  flask:
+  ai:
     build: .
-    container_name: flask_api
+    container_name: gpt-4o-mini
     restart: always
     env_file:
       - .env
+    networks:
+      - harpsharp
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx_server
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - flask
+networks:
+  harpsharp:
+    external: true
