test: CI/CD 환경 구성 및 배포 테스트

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   ai:
     build: .
-    container_name: gpt-4o-mini
+    container_name: gpt-4o
     restart: always
     env_file:
       - .env
