--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -39,6 +39,7 @@ jobs:
         working-directory: .
         run: |
           mkdir -p deploy-ai
+          cp ./.env ./deploy-ai
           cp ./app.py ./deploy-ai
           cp ./appspec.yml ./deploy-ai 
           cp ./docker-compose.yml ./deploy-ai
