test: CI/CD 환경 구성 및 배포 테스트

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -36,7 +36,8 @@ jobs:
         run: |
           mkdir -p deploy-ai
           touch ./deploy-ai/.env
-          echo "${{ secrets.ENV }}" | base64 --decode > ./deploy-ai/.env
+          echo "${{ secrets.ENV }}" | base64 --decode >> ./deploy-ai/.env
+          ls deploy-ai -a
           cp ./app.py ./deploy-ai
           cp ./appspec.yml ./deploy-ai 
           cp ./docker-compose.yml ./deploy-ai
