--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -35,8 +35,7 @@ jobs:
         working-directory: .
         run: |
           mkdir -p deploy-ai
-          touch ./deploy-ai/.env
-          echo "${{ secrets.ENV }}" | base64 --decode >> ./deploy-ai/.env
+          echo "${{ secrets.ENV }}" | base64 --decode >> ./deploy-ai/env
           ls deploy-ai -a
           cp ./app.py ./deploy-ai
           cp ./appspec.yml ./deploy-ai 
