test: CI/CD 환경 구성 및 배포 테스트

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   ai:
     build: .
     container_name: gpt4o
-    restart: always
+    restart: on-failure
     env_file:
       - .env
     networks:
